--- a/estilo/style.css
+++ b/estilo/style.css
@@ -15,7 +15,7 @@ header {
 }
 
 header > h1 {
-    font-size: 100px;
+    font-size: 10vw;
     font-family: 'Passion One', Arial, Verdana, sans-serif;
     font-weight: bold;
     margin: 15px 10px 0px 10px;
@@ -32,15 +32,24 @@ header a:hover {
 
 header > p {
     margin-top: 0px;
+    font-size: 2vw;
 }
 
 span.title {
     font-size: 0.7em;
 }
 
+main > p.poesia {
+    font-size: 5vw;
+}
+
+main > p.poesia {
+    font-size: 4vw;
+}
+
 .poesia {
-    line-height: 70px;
-    font-size: 2.1em;
+    line-height: 7vw;
+    font-size: 3vw;
     font-family: "Sriracha", cursive;
     font-weight: normal;
 
@@ -62,6 +71,7 @@ div#primeiro-background {
     
     margin: 25px;
     border-radius: 10px;
+    font-size: 5vw;
 }
 
 #segundo-background {
